useState error handle/CSS-reversed

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,8 @@
 .App {
-  /* display: flex;
+  display: flex;
   justify-content: center;
   margin-top: 10px;
-  text-align: center; */
-
-  /* //// */
-
+  text-align: center;
   /* background-color: #F5C59C;
   -webkit-animation: master-container-bg 15s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
   animation: master-container-bg 15s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
@@ -22,25 +19,19 @@
 
 /* for input */
 
-.container {
-  display: grid;
-  grid-template-columns: repeat(2, 2fr);
-  column-gap: 5rem;
-}
-
 input {
   font-weight: bold;
   text-transform: uppercase;
   /* font-family: 'Abril Fatface', cursive; */
   font-family: 'Special Elite', cursive;
-  /* margin-left: 920px; */
+  margin-left: 920px;
   padding-top: 12px;
   padding-bottom: 5px;
   padding-left: 10px;
   border: 3px solid black;
   background: transparent;
   border-radius: 30px;
-  width: 50%;
+  width: 25%;
   /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25); */
 }
 
@@ -48,6 +39,7 @@ input {
 
 .btn {
   margin-top: 3%;
+  margin-left: -86px;
   width: 6%;
   padding: 6px;
   border-radius: 30px;
@@ -64,7 +56,6 @@ text-transform: uppercase; */
   box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.25);
 }
 .cc {
-  display: inline-block;
   padding: 6px;
   font-size: 35px;
   border: 1px solid #020202;
@@ -148,20 +139,9 @@ text-transform: uppercase; */
 
 /* the flex display */
 
-/* .updater {
+.updater {
   display: flex;
-} */
-
-@media screen and (max-width: 480px) {
-  body {
-    margin: auto auto;
-  }
-
-  .container {
-    display: block;
-  }
 }
-
 .flex-child {
   width: 500px;
   height: 500px;
