--- a/src/App.css
+++ b/src/App.css
@@ -199,7 +199,7 @@ a {
 }
 
 #master {
-  font-family: 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font-family: 'Arial', Helvetica, sans-serif;
   font-size: 60px;
   font-style: normal;
   text-decoration: none;
